# leonardp-chess

./: .travis.yml  Cargo.toml  chess_outline.rim  readme.md
chess_sketch/: Cargo.toml
chess_sketch/src/: lib.rs
chess_std/: Cargo.toml
chess_std/src/: _main.rs  lib.rs  main.rs  piece.rs  position.rs  repl.rs  view.rs
chess_std/src/lib/: color.rs  matcher.rs  mod.rs  pgn.rs  piece.rs  position.rs
chess_std/test_data/: board_plain.txt  board_std_moves.txt
docs/: outline.rim
engine/: Cargo.toml
engine/src/: color.rs  lib.rs  pgn.rs  piece.rs  position.rs
engine/test_data/: faulty_checkmate.txt
gui/: Cargo.toml
gui/src/: interface.rs  lib.rs  main.rs  texturepack.rs
hansing_gui/: Cargo.toml
hansing_gui/src/: lib.rs  main.rs  texturepack.rs
hansing_gui/src/assets/: mod.rs
repl/: Cargo.toml
repl/src/: main.rs  repl.rs
